--- a/tienda-muebles/css/app.css
+++ b/tienda-muebles/css/app.css
@@ -1,42 +1,75 @@
-html{
+html {
     box-sizing: border-box;
-    font-size: 62.5%; /* 1 rem = 10 px */
+    font-size: 62.5%;
+    /* 1 rem = 10 px */
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
-body{
+
+body {
     font-family: 'Raleway', sans-serif;
     font-size: 1.6rem;
     line-height: 2;
 }
+
 /* Globales */
-h1{
-font-size: 5rem;
+h1 {
+    font-size: 4rem;
 }
-h2{
-font-size: 4rem;
+
+@media (min-width: 768px) {
+    h1 {
+        font-size: 5rem;
+    }
 }
-h3{
-font-size: 3rem;
+
+h2 {
+    font-size: 3.2remrem;
 }
-h1, h2 ,h3{
+
+@media (min-width: 768px) {
+    h2 {
+        font-size: 4rem;
+    }
+}
+
+h3 {
+    font-size: 2.4rem;
+}
+
+@media (min-width: 768px) {
+    h3 {
+        font-size: 3rem;
+    }
+}
+
+h1,
+h2,
+h3 {
     font-family: 'Playfair Display', serif;
-    margin: 0 0 5rem 0;
+    margin: 0 0 2rem 0;
 }
-a{
+
+a {
     text-decoration: none;
     color: #000;
 }
-.contenedor{
+
+.contenedor {
     max-width: 120rem;
-    margin: 0 auto ;
+    margin: 0 auto;
 }
-img{
+
+img {
     max-width: 100%;
     display: block;
 }
-.btn{
+
+.btn {
     background-color: #8cbc00;
     display: block;
     color: #fff;
@@ -46,231 +79,400 @@ img{
     transition: background-color .3s ease-out;
     text-align: center;
     border: none;
+    width: 100%;
 }
-.btn:hover{
+
+.btn:hover {
     cursor: pointer;
     background-color: #769c02;
 }
+@media (min-width: 768px ) { 
+        .btn{
+            width: auto;
+        }
+ }
 
 /* Utilidades */
 
-.text-center{
+.text-center {
     text-align: center;
 }
-.max-width-30 {
-    max-width: 30rem;
+
+@media (min-width: 768px) {
+    .max-width-30 {
+        max-width: 30rem;
+    }
+
 }
 
 /* Header y Navegacion */
-.nombre-sitio{
+.nombre-sitio {
     margin-top: 5rem;
     text-align: center;
-   
+
 }
 
-.nombre-sitio span{
-    color:#037bc0; 
-   
+.nombre-sitio span {
+    color: #037bc0;
+
 }
 
-.contenedor-navegacion{
-    border-top: 1px solid #e1e1e1 ;
- 
+.contenedor-navegacion {
+    border-top: 1px solid #e1e1e1;
+
 }
-.nav-principal{
+
+.nav-principal {
     padding: 2rem 0;
     display: flex;
-    justify-content: space-between;
-  
+    flex-direction: column;
+    align-items: center;
+
 }
-.hero{
+
+@media (min-width: 768px) {
+    .nav-principal {
+        justify-content: space-between;
+        flex-direction: row;
+    }
+}
+
+.hero {
     background-image: url(../img/principal.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 55rem;
+    height: 25rem;
+}
+
+@media (min-width: 768px) {
+    .hero {
+        height: 55rem;
+    }
 }
 
 /* Categorias */
-.categorias{
-    padding-top: 5rem;
+.categorias {
+    padding-top: 5rem 0;
 }
-.categorias h2{
+
+.categoria {
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .categoria {
+        margin-bottom: 0;
+    }
+}
+
+.categoria img {
+    width: 100%;
+}
+
+.categorias h2 {
     text-align: center;
 }
+
 .categoria a {
     text-align: center;
     display: block;
     padding: 2rem;
     font-size: 2rem;
 }
-.categoria a:hover{
-    background-color: #037bc0; 
+
+.categoria a:hover {
+    background-color: #037bc0;
     color: #fff;
     border-bottom-right-radius: 10px;
 }
-.listado-categorias{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-    
+
+
+@media (min-width: 768px) {
+    .listado-categorias {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+
+    }
 }
 
 /* Bloque nosotros */
-.sobre-nosotros{
-    background-image: linear-gradient( to right, transparent 50%,#037bc0 50%, #037bc0 100% ), url(../img/nosotros.jpg);
-    background-position: left center;
+.sobre-nosotros {
+    background-image: linear-gradient(to bottom, transparent 50%, #037bc0 50%, #037bc0 100%), url(../img/nosotros.jpg);
+    background-position: center, top left;
     background-repeat: no-repeat;
-    background-size: 100%, 120rem;
-    padding: 10rem 0 ;
+    background-size: 100%, 70rem;
     margin-top: 5rem;
 }
-.sobre-nosotros-grid{
-    display: flex;
-    justify-content: end;
+
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url(../img/nosotros.jpg);
+        background-position: left center;
+        background-size: 100%, 160rem;
+        padding: 10rem 0;
+        margin-top: 5rem;
+    }
 }
-.sobre-nosotros-texto{
-    flex-basis: 46%;
-    padding-left: 10rem;
+
+.sobre-nosotros-grid {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+@media (min-width: 768px) {
+    .sobre-nosotros-grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: unset;
+    }
+}
+
+.sobre-nosotros-texto {
+    grid-row: 2 / 3;
+    padding: 5rem;
     color: #fff;
-    
+
+}
+
+@media (min-width: 768px) {
+    .sobre-nosotros-texto {
+        grid-column: 2 / 3;
+        padding: 4rem;
+
+
+    }
 }
 
 /* listado de productos */
-.contenido-principal{
+.contenido-principal {
     padding-top: 5rem;
 }
 
-.listado-productos{
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 2rem;
+@media (min-width: 768px) {
+    .listado-productos {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 2rem;
+    }
+
+    .producto:nth-child(1) {
+        grid-column: 1/7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+
+    .producto:nth-child(1) img {
+        height: 43rem;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .producto:nth-child(2) {
+        grid-column: 1/4;
+    }
+
+    .producto:nth-child(2) img {
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .producto:nth-child(3) {
+        grid-column: 4/7;
+    }
+
+    .producto:nth-child(3) img {
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .producto:nth-child(4) {
+        grid-column: 1/3;
+    }
+
+    .producto:nth-child(5) {
+        grid-column: 3/5;
+    }
+
+    .producto:nth-child(6) {
+        grid-column: 5/7;
+    }
 }
-.producto:nth-child(1){
-    grid-column: 1/7 ;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-.producto:nth-child(1) img{
-    height: 43rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(2){
-    grid-column: 1/4 ;
-}
-.producto:nth-child(2) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(3){
-    grid-column: 4/7 ;
-}
-.producto:nth-child(3) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(4){
-    grid-column: 1/3 ;
-}
-.producto:nth-child(5){
-    grid-column: 3/5 ;
-}
-.producto:nth-child(6){
-    grid-column: 5/7 ;
-}
-.producto{
+
+
+.producto {
     background-color: #037bc0;
+    margin-bottom: 2rem;
 }
-.texto-producto{
+
+@media (min-width: 768px) {
+    .producto {
+
+        margin-bottom: 0;
+    }
+}
+
+.producto:last-of-type {
+    margin-bottom: 0;
+}
+
+.texto-producto {
     text-align: center;
     color: #fff;
     padding: 2rem;
 
 }
-.texto-producto h3{
+
+.texto-producto h3 {
     margin: 0;
 
 }
-.texto-producto p{
+
+.texto-producto p {
     margin: 0 0 .5rem 0;
-    
+
 }
-.texto-producto .precio{
+
+.texto-producto .precio {
     font-size: 2.8rem;
     font-weight: 900;
 }
 
 /* Footer */
 
-.site-footer{
+.site-footer {
     border-top: solid 1px #e1e1e1;
     margin-top: 5rem;
     padding-top: 5rem;
 }
-.grid-footer h3{
+
+.grid-footer h3 {
     margin-bottom: .5rem;
+    text-align: center;
 }
-.grid-footer{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
+
+@media (min-width: 768px) {
+    .grid-footer h3 {
+        text-align: left;
+    }
 }
-.footer-menu a{
+
+
+
+@media (min-width: 768px) {
+    .grid-footer {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: left;
+        gap: 2rem;
+    }
+}
+
+.grid-footer>div {
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .grid-footer>div {
+        margin-bottom: 0;
+    }
+}
+
+.footer-menu a {
     display: block;
-    
-    
+    text-align: center;
 }
-.Copyright{
+
+@media (min-width: 768px) {
+    .footer-menu a {
+
+        text-align: unset;
+    }
+}
+
+.Copyright {
     text-align: center;
     margin-top: 5rem;
 }
 
 /* Nosotros */
 
-.contenido-nosotros{
+.contenido-nosotros {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     column-gap: 4rem;
 }
-.informacion-nosotros{
+
+.informacion-nosotros {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) {
+    .informacion-nosotros {
+        padding: 0;
+    }
 }
 
 /* Blog */
-
-.contenedor-blog{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 4rem;
+@media (min-width: 768px) {
+    .contenedor-blog {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
 }
-.entrada{
+
+
+.entrada {
     border-bottom: solid 1px #e1e1e1;
     padding-bottom: 4rem;
     margin-bottom: 2rem;
-}
-.entrada:last-of-type{
-    border:none;
-}
-.entrada-meta{
-    display: flex;
-    justify-content: space-between;
 
 }
-.entrada-meta P{
+
+.entrada h2 {
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .entrada h2 {
+        text-align: left;
+    }
+}
+
+.contenido-blog {
+    padding: 2rem;
+}
+
+.entrada:last-of-type {
+    border: none;
+}
+
+@media (min-width: 768px) {
+    .entrada-meta {
+        display: flex;
+        justify-content: space-between;
+
+    }
+}
+
+
+.entrada-meta P {
     font-weight: bold;
 }
-.entrada-meta span{
-    color: #037bc0 ;
+
+.entrada-meta span {
+    color: #037bc0;
 }
 
 /* Entrada */
-.contenido-entrada-blog{
+.contenido-entrada-blog {
     width: 60rem;
     margin: 0 auto;
 }
@@ -278,15 +480,21 @@ img{
 
 /* Galeria */
 
-.galeria{
+.galeria {
     list-style: none;
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
 }
-.galeria img{
+@media (min-width: 768px) { 
+        .galeria{
+            grid-template-columns: repeat(3, 1fr);
+        }
+ }
+
+.galeria img {
     height: 40rem;
     width: 40rem;
     object-fit: cover;
@@ -294,17 +502,23 @@ img{
 
 /* Formulario */
 
-.formulario{
-    width: 60rem;
+.formulario {
+    width: 40rem;
     margin: 0 auto;
 }
+@media (min-width: 768px) { 
+    .formulario {
+        width: 60rem;
+        margin: 0 auto;
+    }
+ }
 .formulario fieldset {
     border: solid 1px black;
-    margin-bottom: 2rem ;
+    margin-bottom: 2rem;
 
 }
 
-.formulario legend{
+.formulario legend {
     background-color: #005485;
     width: 100%;
     text-align: center;
@@ -314,15 +528,19 @@ img{
     padding: 1rem;
     margin-bottom: 4rem;
 }
+
 .campo {
     display: flex;
     margin-bottom: 2rem;
 }
-.campo label{
+
+.campo label {
     flex-basis: 10rem;
 }
 
-.campo input:not([type="radio"]), textarea, select {
+.campo input:not([type="radio"]),
+textarea,
+select {
     flex: 1;
     border: solid 1px #e1e1e1;
     padding: 1rem;
