--- a/04 - nucleus-eWallet/css/styles.css
+++ b/04 - nucleus-eWallet/css/styles.css
@@ -4,196 +4,326 @@
     --negro: #000000;
     --fuentePrincipal: 'Poppins', sans-serif;
 }
+
 html {
     font-size: 62.5%;
     box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
+
 body {
     font-family: var(--fuentePrincipal);
     font-size: 1.6rem;
     line-height: 1.8;
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
     font-weight: 900;
     margin: 2rem 0;
 }
+
 h1 {
     font-size: 5rem;
 }
+
 h2 {
     font-size: 4.6rem;
 }
+
 h3 {
     font-size: 3rem;
 }
+
 a {
     text-decoration: none;
 }
+
 img {
     max-width: 100%;
     display: block;
 }
-[class$="__contenedor"]{
+
+[class$="__contenedor"] {
     max-width: 120rem;
     margin: 0 auto;
     width: 90%;
 }
 
+[class$="__heading"] {
+    text-align: center;
+    margin-bottom: 5rem;
+}
 
 /* Header */
 
-.header{
-     background-image: url(../img/header_bg.svg);
-     background-repeat: no-repeat;
-     background-size: 10rem;
-     background-position: top right;
-     padding: 5rem ;
+.header {
+    background-image: url(../img/header_bg.svg);
+    background-repeat: no-repeat;
+    background-size: 10rem;
+    background-position: top right;
+    padding: 5rem;
 }
-@media (min-width: 768px) { 
-      .header{
+
+@media (min-width: 768px) {
+    .header {
         background-size: 50rem;
-      }
- }
- @media (min-width: 992px) { 
-    .header{
-      background-size: 60rem;
-    }
-}
-@media (min-width: 1280px) { 
-    .header{
-      background-size: 110rem;
     }
 }
 
-@media (min-width: 768px) { 
-      .header__barra{
+@media (min-width: 992px) {
+    .header {
+        background-size: 60rem;
+    }
+}
+
+@media (min-width: 1280px) {
+    .header {
+        background-size: 110rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .header__barra {
         display: flex;
         justify-content: space-between;
-      }
- }
- .header__logo{
+    }
+}
+
+.header__logo {
     width: 15rem;
     margin: 0 auto 3rem auto;
- }
- @media (min-width: 768px) { 
-      .header__logo{
+}
+
+@media (min-width: 768px) {
+    .header__logo {
         margin: 0;
-      }
-      .header__grid{
+    }
+
+    .header__grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 4rem;
         align-items: center;
-      }
-  }
-  .header__heading{
-    text-align: center;
+    }
+}
+
+.header__heading {
+
     font-size: 3rem;
-  }
-  @media (min-width: 768px) { 
-    .header__imagen{
+}
+
+@media (min-width: 768px) {
+    .header__imagen {
         max-width: 30rem;
         margin: 0 auto;
     }
-   }
-  
-  @media (min-width: 768px) { 
-          .header__heading{
-            text-align: left;
-            font-size: 5rem;
-            line-height: 1.2;
-          }
-   }
+}
 
-   .header__boton{
+@media (min-width: 768px) {
+    .header__heading {
+        text-align: left;
+        font-size: 5rem;
+        line-height: 1.2;
+    }
+}
+
+.header__boton {
     background-color: var(--primario);
     display: block;
     padding: 1rem;
     text-align: center;
     color: var(--blanco);
     margin-bottom: 4rem;
-  }
-@media (min-width: 768px) { 
-      .header__boton{
+}
+
+@media (min-width: 768px) {
+    .header__boton {
         padding: 1rem 3rem;
         display: inline-block;
-      }
- }
+    }
+}
 
-  /* Navegacion */
+/* Navegacion */
 
-  .navegacion{
+.navegacion {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  @media (min-width:768px) { 
-         .navegacion{
-            flex-direction: row;
-            align-items: flex-start;
-            gap: 2rem;
-        
-         } 
-   }
-  .navegacion__link{
+}
+
+@media (min-width:768px) {
+    .navegacion {
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 2rem;
+
+    }
+}
+
+.navegacion__link {
     color: var(--primario);
-  }
-  @media (min-width: 768px) { 
-          .navegacion__link{
-            color:var(--blanco);
-          }
-   }
+}
 
-   /* Seccion ¿Qué es? */
+@media (min-width: 768px) {
+    .navegacion__link {
+        color: var(--blanco);
+    }
+}
 
-   .nucleus{
+/* Seccion ¿Qué es? */
+
+.nucleus {
     margin-top: 3rem;
     padding: 5rem 0;
-   }
-   .nucleus__heading{
-    text-align: center;
-    margin-bottom: 5rem;
-   }
-   .nucleus__grid{
+}
+
+
+
+.nucleus__grid {
     display: flex;
     flex-direction: column-reverse;
-   }
-   @media (min-width: 768px) { 
-    .nucleus__grid{
-        display:grid;
+}
+
+@media (min-width: 768px) {
+    .nucleus__grid {
+        display: grid;
         grid-template-columns: 1fr 2fr;
         column-gap: 5rem;
         align-items: center;
-       }
-          
     }
-   
 
-    /* Listado */
+}
 
-    .listado{
 
+/* Listado */
+
+.listado {}
+
+.listado__elemento {
+    box-shadow: 0px 0px 15px 3px rgb(0 0 0 / .15);
+    padding: 2rem;
+    margin-bottom: 5rem;
+    transition-property: transform;
+    transition-duration: .3s;
+    background-color: var(--blanco);
+}
+
+.listado__elemento:hover {
+    transform: scale(1.1);
+}
+
+@media (min-width: 768px) {
+    .listado__elemento--2col {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2rem;
     }
-    .listado__elemento{
-        box-shadow: 0px 0px 15px 3px rgb(0 0 0 / .15);
-        padding: 2rem;
-        margin-bottom: 5rem;
-        transition-property: transform;
-        transition-duration: .3s;
-        
+}
+
+.listado__heading {
+    font-size: 3rem;
+    color: var(--primario);
+    margin: 0;
+}
+
+.listado__numero {
+    font-size: 6rem;
+    margin: 0;
+    font-weight: 900;
+    color: var(--primario);
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .listado__numero {
+        flex-basis: 20rem;
+        text-align: right;
+        font-size: 4rem;
     }
-    .listado__elemento:hover{
-        transform: scale(1.1);
+}
+
+.listado__texto {
+    margin: 0;
+    font-size: 2rem;
+}
+
+/* Seguridad */
+
+.seguridad {
+    background-color: var(--primario);
+    padding: 20rem 0rem;
+    position: relative;
+    margin-top: 10rem;
+    overflow: hidden;
+}
+
+.seguridad::before,
+.seguridad::after {
+    background-color: var(--blanco);
+    content: '';
+    height: 20rem;
+    width: 101%;
+
+    position: absolute;
+}
+
+.seguridad::before {
+    top: -10rem;
+    left: 0;
+    transform: rotate(3deg);
+}
+
+.seguridad::after {
+    bottom: -10rem;
+    right: 1;
+    transform: rotate(-3deg);
+}
+
+.seguridad__heading {
+    color: var(--blanco);
+}
+
+@media (min-width: 768px) {
+    .seguridad__grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 5rem;
+        align-items: center;
     }
-    .listado__heading{
-        font-size: 3rem;
-        color: var(--primario);
-        margin: 0;
+}
+
+@media (min-width: 768px) {
+    .comisiones__grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 5rem;
+        align-items: flex-end;
     }
-    .listado__texto{
-        margin: 0;
-        font-size: 2rem;
+}
+
+@media (min-width: 998px) {
+    .comisiones__grid {
+        align-items: center;
     }
+}
+
+.comisiones__texto {
+    text-align: center;
+    font-size: 2.4rem;
+    font-weight: 700;
+
+}
+
+@media (min-width: 768px) {
+    .comisiones__texto {
+        text-align: left;
+    }
+}
